cassandra/4-cassandra-ingressroutetcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: cassandra-route
  namespace: default

spec:
  entryPoints:
    - cassandra

  routes:
    - match: HostSNI(`*`)
      services:
        - name: cassandra
          port: 9042
